# libembedding

./: .gitignore  CMakeLists.txt  README.md  embedding.cpp  embedding.h  embedding_test.cpp
embedding/: CMakeLists.txt
embedding/src/document_retrieval/: document_retrieval.cpp  document_retrieval.h  mediator_config.cpp  mediator_config.h
embedding/src/embedding/: cross_lang_embedding.cpp  cross_lang_embedding.h  embedding.cpp  embedding.h  mono_lang_embedding.cpp  mono_lang_embedding.h
embedding/src/paraphrase_search/: paraphrase_search.cpp  paraphrase_search.h
embedding/src/test/: embedding_test.cpp
embedding/src/test/data/: embedding.en  embedding.ru
